--- a/pkg/addon/manifests/chart/templates/service.yaml
+++ b/pkg/addon/manifests/chart/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     component: "work-manager"
 spec:
-{{- if eq .Values.isOCP false }}
+{{- if eq .Values.hasRoute false }}
   type: LoadBalancer
 {{- end }}
   ports:
