--- a/pkg/addon/manifests/chart/values.yaml
+++ b/pkg/addon/manifests/chart/values.yaml
@@ -8,7 +8,7 @@ fullnameOverride: klusterlet-addon-workmgr
 hubKubeConfigSecret: null
 clusterName: null
 
-isOCP: false
+hasRoute: false
 
 affinity: {}
 
