enhance imageRegistry API to support multi-registries
Signed-off-by: Zhiwei Yin <zyin@redhat.com>

--- a/deploy/foundation/hub/resources/crds/imageregistry.open-cluster-management.io_managedclusterimageregistries.yaml
+++ b/deploy/foundation/hub/resources/crds/imageregistry.open-cluster-management.io_managedclusterimageregistries.yaml
@@ -61,13 +61,26 @@ spec:
                     description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
                     type: string
                 type: object
+              registries:
+                description: Registries includes the mirror and source registries. The source registry will be replaced by the Mirror. The larger index will work if the Sources are the same.
+                items:
+                  properties:
+                    mirror:
+                      description: Mirror is the mirrored registry of the Source. Will be ignored if Mirror is empty.
+                      type: string
+                    source:
+                      description: Source is the source registry. All image registries will be replaced by Mirror if Source is empty.
+                      type: string
+                  required:
+                  - mirror
+                  type: object
+                type: array
               registry:
-                description: Registry is the address of overridden image registry
+                description: Registry is the Mirror registry which will replace all images registries. will be ignored if Registries is not empty.
                 type: string
             required:
             - placementRef
             - pullSecret
-            - registry
             type: object
           status:
             description: Status represents the desired status of the managedClusterImageRegistry.
