--- a/deploy/foundation/hub/resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
+++ b/deploy/foundation/hub/resources/crds/internal.open-cluster-management.io_managedclusterinfos.yaml
@@ -253,7 +253,7 @@ spec:
                 description: LoggingPort shows the port to connect to logging server of managed cluster
                 properties:
                   appProtocol:
-                    description: The application protocol for this port. This field follows standard Kubernetes label syntax. Un-prefixed names are reserved for IANA standard service names (as per RFC-6335 and http://www.iana.org/assignments/service-names). Non-standard protocols should use prefixed names such as mycompany.com/my-custom-protocol. This is a beta field that is guarded by the ServiceAppProtocol feature gate and enabled by default.
+                    description: The application protocol for this port. This field follows standard Kubernetes label syntax. Un-prefixed names are reserved for IANA standard service names (as per RFC-6335 and http://www.iana.org/assignments/service-names). Non-standard protocols should use prefixed names such as mycompany.com/my-custom-protocol.
                     type: string
                   name:
                     description: The name of this port.  This must match the 'name' field in the corresponding ServicePort. Must be a DNS_LABEL. Optional only if one port is defined.
