--- a/pkg/addon/manifests/chart/templates/service.yaml
+++ b/pkg/addon/manifests/chart/templates/service.yaml
@@ -1,4 +1,5 @@
 ---
+{{- if not (eq .Values.product "") }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -7,7 +8,7 @@ metadata:
   labels:
     component: "work-manager"
 spec:
-{{- if eq .Values.hasRoute false }}
+{{- if not (eq .Values.product "OpenShift") }}
   type: LoadBalancer
 {{- end }}
   ports:
@@ -17,3 +18,4 @@ spec:
       targetPort: 4443
   selector:
     component: "work-manager"
+{{- end }}
