--- a/pkg/addon/manifests/chart/values.yaml
+++ b/pkg/addon/manifests/chart/values.yaml
@@ -8,6 +8,7 @@ fullnameOverride: klusterlet-addon-workmgr
 hubKubeConfigSecret: null
 clusterName: null
 
+product: ""
 hasRoute: false
 
 affinity: {}
