Make work mgr agent use restricted scc
Signed-off-by: zhujian <jiazhu@redhat.com>

--- a/pkg/addon/manifests/chart/templates/deployment.yaml
+++ b/pkg/addon/manifests/chart/templates/deployment.yaml
@@ -20,6 +20,8 @@ spec:
         component: "work-manager"
     spec:
       serviceAccountName: {{ template "work-manager.fullname" . }}
+      securityContext:
+        runAsNonRoot: true
       containers:
       - name: acm-agent
         image: "{{ .Values.global.imageOverrides.multicloud_manager }}"
@@ -31,7 +33,6 @@ spec:
             - ALL
           privileged: false
           readOnlyRootFilesystem: true
-          runAsNonRoot: true
         resources:
           {{- toYaml .Values.resources | nindent 10 }}
         args:
