--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -36,7 +36,14 @@ rules:
     resources: ["managedclusters","managedclustersets","placementdecisions","placementdecisions/status"]
     verbs: ["get", "list", "watch", "update"]
   - apiGroups: ["cluster.open-cluster-management.io"]
+    resources: ["managedclustersetbindings"]
+    verbs: ["create", "update", "get", "list", "watch", "delete", "deletecollection", "patch"]
+  - apiGroups: ["cluster.open-cluster-management.io"]
     resources: ["managedclustersets/join"]
+    verbs: ["create"]
+  - apiGroups: ["cluster.open-cluster-management.io"]
+    resources: ["managedclustersets/bind"]
+    resourceNames: ["global"]
     verbs: ["create"]
   - apiGroups: ["cluster.open-cluster-management.io"]
     resources: ["managedclusters/status"]
