--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -20,6 +20,9 @@ rules:
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles","clusterrolebindings"]
     verbs: ["get", "list", "watch", "create", "update", "delete", "escalate", "bind"]
+  - apiGroups: ["cluster.open-cluster-management.io"]
+    resources: ["managedclustersetbindings"]
+    verbs: ["create", "update", "get", "list", "watch", "delete", "deletecollection", "patch"]
   - apiGroups: ["authorization.k8s.io"]
     resources: ["subjectaccessreviews"]
     verbs: ["get", "create"]
