--- a/pkg/addon/manifests/chart/values.yaml
+++ b/pkg/addon/manifests/chart/values.yaml
@@ -11,6 +11,7 @@ clusterName: null
 product: ""
 hasRoute: false
 enableSyncLabelsToClusterClaims: true
+enableNodeCollector: true
 
 affinity: {}
 
