--- a/pkg/addon/manifests/chart/values.yaml
+++ b/pkg/addon/manifests/chart/values.yaml
@@ -11,7 +11,7 @@ clusterName: null
 product: ""
 hasRoute: false
 enableSyncLabelsToClusterClaims: true
-enableNodeCollector: true
+enableNodeCapacity: true
 
 affinity: {}
 
