--- a/pkg/addon/manifests/chart/templates/namespace.yaml
+++ b/pkg/addon/manifests/chart/templates/namespace.yaml
@@ -6,4 +6,8 @@ metadata:
   labels:
     addon.open-cluster-management.io/hosted-manifest-location: hosting
     addon.open-cluster-management.io/namespace: "true"
+  {{- if eq (.Release.Namespace | trimPrefix "klusterlet-") .Values.clusterName }}
+  annotations:
+    "addon-cluster-management.io/deletion-orphan": ""
+  {{- end }}
 {{- end }}
