--- a/deploy/foundation/hub/resources/clusterrole.yaml
+++ b/deploy/foundation/hub/resources/clusterrole.yaml
@@ -67,14 +67,8 @@ rules:
     resources: ["clusterstatuses/aggregator"]
     verbs: ["get", "create"]
   - apiGroups: ["hive.openshift.io"]
-    resources: ["clusterdeployments", "clusterpools", "clusterclaims", "machinepools", "syncsets"]
+    resources: ["clusterdeployments", "clusterpools", "clusterclaims", "machinepools"]
     verbs: ["update", "get", "list", "watch"]
-  - apiGroups: ["hiveinternal.openshift.io"]
-    resources: ["clustersyncs"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: ["hive.openshift.io"]
-    resources: [ "syncsets"]
-    verbs: ["create", "update", "delete"]
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "create", "update"]
