--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**,**/test/**,**/cmd/**,**/apis/**,**/api/**,**/klusterlet/log/**,**/klusterlet/agent/**,**/controllers/**,**/proxyserver/rest/**,**/error.go,**/kubecontrol.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**,**/e2e/**
+sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**,test/**
 sonar.go.tests.reportPaths=report.json
 sonar.go.coverage.reportPaths=coverage.out
 sonar.externalIssuesReportPaths=gosec.json
