do not create route in hosted mode
Signed-off-by: Zhiwei Yin <zyin@redhat.com>

--- a/pkg/addon/manifests/chart/templates/service.yaml
+++ b/pkg/addon/manifests/chart/templates/service.yaml
@@ -1,4 +1,5 @@
 ---
+{{- if not (eq .Values.installMode "Hosted") }}
 {{- if not (eq .Values.product "") }}
 apiVersion: v1
 kind: Service
@@ -19,4 +20,5 @@ spec:
       targetPort: 4443
   selector:
     component: "work-manager"
+{{- end }}
 {{- end }}
