--- a/pkg/addon/manifests/chart/templates/deployment.yaml
+++ b/pkg/addon/manifests/chart/templates/deployment.yaml
@@ -40,6 +40,7 @@ spec:
           - "--port=4443"
           - "--hub-kubeconfig=/var/run/klusterlet/kubeconfig"
           - "--cluster-name={{ .Values.clusterName }}"
+        {{- if not (eq .Values.installMode "Hosted") }}
         {{- if eq .Values.clusterName "local-cluster" }}
           - "--agent-address={{ template "work-manager.fullname" . }}.{{ .Release.Namespace }}.svc"
           - "--agent-port=443"
@@ -47,6 +48,7 @@ spec:
           - "--agent-route={{ .Release.Namespace }}/{{ template "work-manager.fullname" . }}"
         {{- else  }}
           - "--agent-service={{ .Release.Namespace }}/{{ template "work-manager.fullname" . }}"
+        {{- end }}
         {{- end }}
         {{- if eq .Values.installMode "Hosted" }}
           - "--managed-kubeconfig=/managed/config/kubeconfig"
