--- a/pkg/addon/manifests/chart/templates/route.yaml
+++ b/pkg/addon/manifests/chart/templates/route.yaml
@@ -1,6 +1,7 @@
 ---
 {{- if not (eq .Values.clusterName "local-cluster") }}
 {{- if eq .Values.product "OpenShift" }}
+{{- if not (eq .Values.installMode "Hosted") }}
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
@@ -20,5 +21,6 @@ spec:
   wildcardPolicy: None
 status:
   ingress: []
+{{- end }}
 {{- end }}
 {{- end }}
