do not create route in hosted mode
Signed-off-by: Zhiwei Yin <zyin@redhat.com>

--- a/pkg/addon/manifests/chart/templates/deployment.yaml
+++ b/pkg/addon/manifests/chart/templates/deployment.yaml
@@ -43,6 +43,7 @@ spec:
           - "--cluster-name={{ .Values.clusterName }}"
           - "--agent-name={{ template "work-manager.fullname" . }}"
         {{- if eq .Values.installMode "Hosted" }}
+          - "--disable-logging-syncer=true"
           - "--managed-kubeconfig=/managed/config/kubeconfig"
         {{- end }}
         {{- if eq .Values.enableSyncLabelsToClusterClaims false }}
