--- a/pkg/addon/manifests/chart/templates/deployment.yaml
+++ b/pkg/addon/manifests/chart/templates/deployment.yaml
@@ -21,6 +21,11 @@ spec:
         component: "work-manager"
     spec:
       serviceAccountName: {{ template "work-manager.fullname" . }}
+      {{- if ne .Values.installMode "Hosted" }}
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault 
+      {{- end }}
       containers:
       - name: acm-agent
         image: "{{ .Values.global.imageOverrides.multicloud_manager }}"
