--- a/.tekton/multicloud-manager-pull-request.yaml
+++ b/.tekton/multicloud-manager-pull-request.yaml
@@ -2,6 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   annotations:
+    build.appstudio.openshift.io/repo: https://github.com/stolostron/multicloud-operators-foundation?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
@@ -14,7 +15,7 @@ metadata:
     appstudio.openshift.io/component: multicloud-manager
     pipelines.appstudio.openshift.io/type: build
   name: multicloud-manager-on-pull-request
-  namespace: red-hat-acm-tenant
+  namespace: crt-redhat-acm-tenant
 spec:
   params:
   - name: dockerfile
@@ -24,7 +25,7 @@ spec:
   - name: image-expires-after
     value: 5d
   - name: output-image
-    value: quay.io/redhat-user-workloads/red-hat-acm-tenant/mce-24/multicloud-manager:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/crt-redhat-acm-tenant/mce-24/multicloud-manager:on-pr-{{revision}}
   - name: path-context
     value: .
   - name: revision
