Fix: restmapping fail when new crd added.
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=open-cluster-management_multicloud-operators-foundation
 sonar.projectName=multicloud-operators-foundation
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/test/**,**/cmd/**,**/apis/**,**/api/**,**/klusterlet/log/**,**/klusterlet/agent/**,**/controllers/**,**/proxyserver/rest/**,**/error.go,**/kubecontrol.go,**/manager.go
+sonar.exclusions=**/*_test.go,**/vendor/**,**/test/**,**/cmd/**,**/apis/**,**/api/**,**/klusterlet/log/**,**/klusterlet/agent/**,**/controllers/**,**/proxyserver/rest/**,**/error.go,**/kubecontrol.go,**/manager.go,**reloadmapper.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**,test/**
