--- a/.tekton/multicloud-manager-pull-request.yaml
+++ b/.tekton/multicloud-manager-pull-request.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   params:
   - name: dockerfile
-    value: Dockerfile
+    value: Dockerfile.rhtap
   - name: git-url
     value: '{{repo_url}}'
   - name: image-expires-after
