refactor log using clusterproxy and managedserviceaccount addons
Signed-off-by: Zhiwei Yin <zyin@redhat.com>

--- a/deploy/foundation/hub/ocm-proxyserver/ocm-proxyserver.yaml
+++ b/deploy/foundation/hub/ocm-proxyserver/ocm-proxyserver.yaml
@@ -28,11 +28,16 @@ spec:
             - "--agent-cafile=/var/run/klusterlet/ca.crt"
             - "--agent-certfile=/var/run/klusterlet/tls.crt"
             - "--agent-keyfile=/var/run/klusterlet/tls.key"
+            - "--proxy-service-cafile=/var/run/clusterproxy/service-ca.crt"
+            - "--proxy-service-name=cluster-proxy-addon-user"
+            - "--proxy-service-port=9092"
           volumeMounts:
             - mountPath: /var/run/klusterlet
               name: klusterlet-certs
             - mountPath: /var/run/apiservice
               name: apiservice-certs
+            - mountPath: /var/run/clusterproxy
+              name: cluster-proxy-service-ca
           livenessProbe:
             httpGet:
               path: /healthz
@@ -55,3 +60,7 @@ spec:
           secret:
             defaultMode: 420
             secretName: ocm-proxyserver
+        - name: cluster-proxy-service-ca
+          configMap:
+            defaultMode: 420
+            name: openshift-service-ca.crt
