--- a/pkg/addon/manifests/chart/templates/service_account.yaml
+++ b/pkg/addon/manifests/chart/templates/service_account.yaml
@@ -7,3 +7,7 @@ metadata:
   labels:
     component: "work-manager"
     addon.open-cluster-management.io/hosted-manifest-location: hosting
+{{- if .Values.global.imagePullSecret }}
+imagePullSecrets:
+- name: "{{ .Values.global.imagePullSecret }}"
+{{- end }}
