--- a/deploy/foundation/hub/ocm-controller/clustermanagementaddon.yaml
+++ b/deploy/foundation/hub/ocm-controller/clustermanagementaddon.yaml
@@ -2,6 +2,8 @@ apiVersion: addon.open-cluster-management.io/v1alpha1
 kind: ClusterManagementAddOn
 metadata:
  name: work-manager
+ annotations:
+   "addon.open-cluster-management.io/lifecycle": "addon-manager"
 spec:
   addOnMeta:
     displayName: work-manager
@@ -9,3 +11,8 @@ spec:
   supportedConfigs:
   - group: addon.open-cluster-management.io
     resource: addondeploymentconfigs
+  installStrategy:
+    type: Placements
+    placements:
+      - name: global
+        namespace: open-cluster-management-global-set
