--- a/pkg/addon/manifests/chart/templates/cluster_role_binding.yaml
+++ b/pkg/addon/manifests/chart/templates/cluster_role_binding.yaml
@@ -2,7 +2,11 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
+  {{- if eq .Release.Namespace "open-cluster-management-agent-addon" }}
   name: {{ .Values.org }}:{{ template "work-manager.fullname" . }}
+  {{- else }}
+  name: {{ .Values.org }}:{{ template "work-manager.fullname" . }}:{{ .Release.Namespace }}
+  {{- end }}
   labels:
     component: "work-manager"
     addon.open-cluster-management.io/hosted-manifest-location: none
