--- a/Dockerfile.rhtap
+++ b/Dockerfile.rhtap
@@ -1,4 +1,4 @@
-FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_1.21 AS builder
+FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_1.22 AS builder
 WORKDIR /go/src/github.com/stolostron/multicloud-operators-foundation
 COPY . .
 ENV GO_PACKAGE github.com/stolostron/multicloud-operators-foundation
@@ -17,7 +17,7 @@ COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundatio
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/agent /
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/e2e.test /
 
-RUN microdnf update && \
+RUN microdnf update -y && \
     microdnf clean all
 
 USER ${USER_UID}
