fix cannot override the addon values using customized variable
Signed-off-by: Zhiwei Yin <zyin@redhat.com>

--- a/pkg/addon/manifests/chart/templates/deployment.yaml
+++ b/pkg/addon/manifests/chart/templates/deployment.yaml
@@ -51,10 +51,10 @@ spec:
           - "--disable-logging-syncer=true"
           - "--managed-kubeconfig=/managed/config/kubeconfig"
         {{- end }}
-        {{- if eq .Values.enableSyncLabelsToClusterClaims false }}
+        {{- if eq .Values.enableSyncLabelsToClusterClaims "false" }}
           - "--enable-sync-labels-to-clusterclaims=false"
         {{- end }}
-        {{- if eq .Values.enableNodeCapacity false }}
+        {{- if eq .Values.enableNodeCapacity "false" }}
           - "--enable-node-capacity=false"
         {{- end}}
         env:
