fix Red Hat Konflux update multicloud-manager-mce-26 - multicloud-operators-foundation/pull/757
Signed-off-by: Yang Le <yangle@redhat.com>

--- a/Dockerfile.rhtap
+++ b/Dockerfile.rhtap
@@ -17,7 +17,7 @@ COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundatio
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/agent /
 COPY --from=builder /go/src/github.com/stolostron/multicloud-operators-foundation/e2e.test /
 
-RUN microdnf update && \
+RUN microdnf update -y && \
     microdnf clean all
 
 USER ${USER_UID}
