--- a/.tekton/multicloud-manager-mce-28-push.yaml
+++ b/.tekton/multicloud-manager-mce-28-push.yaml
@@ -6,7 +6,7 @@ metadata:
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "backplane-2.8"
   creationTimestamp:
   labels:
     appstudio.openshift.io/application: release-mce-28
