--- a/.tekton/multicloud-manager-mce-29-pull-request.yaml
+++ b/.tekton/multicloud-manager-mce-29-pull-request.yaml
@@ -29,6 +29,9 @@ spec:
     - name: build-platforms
       value:
         - linux/x86_64
+        - linux/arm64
+        - linux/ppc64le
+        - linux/s390x
     - name: dockerfile
       value: Dockerfile.rhtap
     - name: path-context
@@ -109,6 +112,9 @@ spec:
         type: string
       - default:
           - linux/x86_64
+          - linux/arm64
+          - linux/ppc64le
+          - linux/s390x
         description: List of platforms to build the container images on. The available set of values is determined by the configuration of the multi-platform-controller.
         name: build-platforms
         type: array
