--- a/.tekton/multicloud-manager-mce-210-pull-request.yaml
+++ b/.tekton/multicloud-manager-mce-210-pull-request.yaml
@@ -4,16 +4,17 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/stolostron/multicloud-operators-foundation?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
+    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
-    pipelinesascode.tekton.dev/cancel-in-progress: "false"
+    pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: release-mce-29
-    appstudio.openshift.io/component: multicloud-manager-mce-29
+    appstudio.openshift.io/application: release-mce-210
+    appstudio.openshift.io/component: multicloud-manager-mce-210
     pipelines.appstudio.openshift.io/type: build
-  name: multicloud-manager-mce-29-on-push
+  name: multicloud-manager-mce-210-on-pull-request
   namespace: crt-redhat-acm-tenant
 spec:
   params:
@@ -22,7 +23,9 @@ spec:
     - name: revision
       value: '{{revision}}'
     - name: output-image
-      value: quay.io/redhat-user-workloads/crt-redhat-acm-tenant/multicloud-manager-mce-29:{{revision}}
+      value: quay.io/redhat-user-workloads/crt-redhat-acm-tenant/multicloud-manager-mce-210:on-pr-{{revision}}
+    - name: image-expires-after
+      value: 5d
     - name: build-platforms
       value:
         - linux/x86_64
@@ -602,7 +605,7 @@ spec:
       - name: netrc
         optional: true
   taskRunTemplate:
-    serviceAccountName: build-pipeline-multicloud-manager-mce-29
+    serviceAccountName: build-pipeline-multicloud-manager-mce-210
   workspaces:
     - name: git-auth
       secret:
